@@ -12,13 +12,16 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -26,12 +29,14 @@ public class JwtFilter extends OncePerRequestFilter {
 
     private final JwtUtil jwtUtil;
     private final UserDetailsService userDetailsService;
+    private static final Logger logger = LoggerFactory.getLogger(JwtFilter.class);
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request,
-                                    @NonNull HttpServletResponse response,
-                                    @NonNull FilterChain filterChain)
-            throws ServletException, IOException {
+    protected void doFilterInternal(
+            HttpServletRequest request,
+            @NonNull HttpServletResponse response,
+            @NonNull FilterChain filterChain
+    ) throws ServletException, IOException {
 
         final String authHeader = request.getHeader("Authorization");
 
@@ -41,39 +46,58 @@ public class JwtFilter extends OncePerRequestFilter {
         try {
             if (authHeader != null && authHeader.startsWith("Bearer ")) {
                 token = authHeader.substring(7);
+
                 try {
                     username = jwtUtil.extractUsername(token);
                 } catch (SignatureException e) {
-                    logger.warn("Token is invalid!");
+                    logger.warn("Invalid JWT signature");
                 } catch (ExpiredJwtException e) {
-                    logger.warn("Token has been expired!");
+                    logger.warn("JWT expired");
                 }
             }
 
             if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-                var userDetails = userDetailsService.loadUserByUsername(username);
+
+                UserDetails userDetails = userDetailsService.loadUserByUsername(username);
+
                 if (jwtUtil.validateToken(token, userDetails)) {
+
                     String roleStr = jwtUtil.extractClaim(token, claims -> claims.get("role", String.class));
+
+                    List<SimpleGrantedAuthority> authorities = List.of();
+
                     if (roleStr != null) {
                         try {
                             UserRole role = UserRole.valueOf(roleStr);
-                            var authorities = Collections.singletonList(new SimpleGrantedAuthority(role.name()));
-                            var authToken = new UsernamePasswordAuthenticationToken(
-                                    userDetails, null, authorities
+
+                            authorities = List.of(
+                                    new SimpleGrantedAuthority("ROLE_" + role.name())
                             );
-                            authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-                            SecurityContextHolder.getContext().setAuthentication(authToken);
+
                         } catch (IllegalArgumentException e) {
-                            logger.error("Invalid role in token: " + roleStr);
+                            logger.error("Invalid role in token: {}", roleStr);
                         }
                     }
+
+                    UsernamePasswordAuthenticationToken authToken =
+                            new UsernamePasswordAuthenticationToken(
+                                    userDetails,
+                                    null,
+                                    authorities
+                            );
+
+                    authToken.setDetails(
+                            new WebAuthenticationDetailsSource().buildDetails(request)
+                    );
+
+                    SecurityContextHolder.getContext().setAuthentication(authToken);
                 }
             }
+
         } catch (Exception e) {
-            logger.warn("JWT Filter error: " + e.getMessage());
+            logger.error("JWT filter error: {}", e.getMessage());
         }
 
         filterChain.doFilter(request, response);
     }
-
 }
